--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Curriculum</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <app-root></app-root>
-    <script src="dist/curriculum/runtime.js" defer></script>
-    <script src="dist/curriculum/polyfills.js" defer></script>
-    <script src="dist/curriculum/styles.js" defer></script>
-    <script src="dist/curriculum/vendor.js" defer></script>
-    <script src="dist/curriculum/main.js" defer></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Project</title>
+  <base href="https://randomcoggles.github.io/curriculum/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.09e2c710755c8867a460.css">
+</head>
+
+<body>
+  <app-root></app-root>
+  <script src="dist/runtime.e227d1a0e31cbccbf8ec.js" defer></script>
+  <script src="dist/polyfills.a4021de53358bb0fec14.js" defer></script>
+  <script src="dist/main.e92f4c625186ffdd8e09.js" defer></script>
+</body>
+
 </html>
