--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
   <app-root></app-root>
-  <script src="dist/runtime.e227d1a0e31cbccbf8ec.js" defer></script>
-  <script src="dist/polyfills.a4021de53358bb0fec14.js" defer></script>
-  <script src="dist/main.ee3823a4ea01a2750c48.js" defer></script>
+  <script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script>
+  <script src="polyfills.a4021de53358bb0fec14.js" defer></script>
+  <script src="main.8881e1bc06afe0290a3a.js" defer></script>
 </body>
 
 </html>
