--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles.09e2c710755c8867a460.css">
 </head>
 
-<body>
+<body class="root">
   <app-root></app-root>
   <script src="dist/runtime.e227d1a0e31cbccbf8ec.js" defer></script>
   <script src="dist/polyfills.a4021de53358bb0fec14.js" defer></script>
