fixing index path

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Curriculum - Itamar Serafim</title>
+  <title>Curriculum - Itamar Serafim Silva</title>
   <base href="https://randomcoggles.github.io/curriculum/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body class="root">
-  <app-root></app-root>
+  <app-root>loading...</app-root>
   <script src="dist/runtime.9349e725de9ebd2c449f.js" defer></script>
   <script src="dist/polyfills.a4021de53358bb0fec14.js" defer></script>
   <script src="dist/main.f725aa58752f87c1035b.js" defer></script>
