--- a/project/src/index.html
+++ b/project/src/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Curriculum - Itamar Serafim</title>
+  <title>Curriculum - Itamar Serafim Silva</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body>
+<body class="src">
   <app-root></app-root>
 </body>
 
