Update main.js ref

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project</title>
+  <title>Curriculum - Itamar Serafim Silva</title>
   <base href="https://randomcoggles.github.io/curriculum/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,9 +12,9 @@
 
 <body>
   <app-root></app-root>
-  <script src="dist/runtime.e227d1a0e31cbccbf8ec.js" defer></script>
-  <script src="dist/polyfills.a4021de53358bb0fec14.js" defer></script>
-  <script src="dist/main.b78735ca0c489e1fcf80.js" defer></script>
+  <script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script>
+  <script src="polyfills.a4021de53358bb0fec14.js" defer></script>
+  <script src="main.dabd3e2fdb2cb969298f.js" defer></script>
 </body>
 
 </html>
