--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
   <app-root></app-root>
-  <script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script>
-  <script src="polyfills.a4021de53358bb0fec14.js" defer></script>
-  <script src="main.dabd3e2fdb2cb969298f.js" defer></script>
+  <script src="dist/runtime.e227d1a0e31cbccbf8ec.js" defer></script>
+  <script src="dist/polyfills.a4021de53358bb0fec14.js" defer></script>
+  <script src="dist/main.0457358839696a7f041d.js" defer></script>
 </body>
 
 </html>
