Updated company logos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Curriculum - Itamar Serafim Silva</title>
+  <title>Itamar Serafim Silva - Software engineer</title>
   <base href="https://randomcoggles.github.io/curriculum/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,7 +13,7 @@
   <app-root>loading...</app-root>
   <script src="dist/runtime.9349e725de9ebd2c449f.js" defer></script>
   <script src="dist/polyfills.a4021de53358bb0fec14.js" defer></script>
-  <script src="dist/main.0457358839696a7f041d.js" defer></script>
+  <script src="dist/main.4cfdc2980d3681f49d4e.js" defer></script>
 </body>
 
 </html>
