--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Itamar Serafim Silva - Software engineer</title>
   <base href="https://randomcoggles.github.io/curriculum/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="dist/favicon.ico">
 </head>
 
 <body class="root">
